test/fixtures/errors/section-not-closed.mustache
<!DOCTYPE html>
<html>
    <head>
        <title>Page with section error</title>
    </head>
    <body>
        <h1>{{title}}</h1>
        {{#section-not-closed}}
    </body>
</html>
